added github info

--- a/index.html
+++ b/index.html
@@ -80,19 +80,23 @@
             </div>
         </section>
 
+        <section class="my-works" id="my-works">
+
+        </section>
+
         <section class="contact" id="contact">
             <h3 class="heading-large font-english fadein">Contact</h3>
             <table>
                 <tr>
-                    <td><img src="images/phone_icon.jpg" alt=""></td>
-                    <td class="address">080-4788-1808</td>
+                    <td><a href="https://github.com/daikImai"><img src="images/github-mark.png" alt="" class="git-icon"></a></td>
+                    <td class="address"><a class="github" href="https://github.com/daikImai">daikImai</a></td>
                 </tr>
                 <tr>
-                    <td><a href="mailto:8ikiad@gmail.com"><img src="images/mail_icon.jpg" alt=""></a></td>
+                    <td><a href="mailto:8ikiad@gmail.com"><img src="images/mail_icon.jpg" alt="" class="icon"></a></td>
                     <td class="address"><a class="gmail" href="mailto:8ikiad@gmail.com">8ikiad@gmail.com</a></td>
                 </tr>
                 <tr>
-                    <td><a href="https://www.instagram.com/maimai8_/"><img src="images/instagram_icon.jpg" alt=""></a></td>
+                    <td><a href="https://www.instagram.com/maimai8_/"><img src="images/instagram_icon.jpg" alt="" class="icon"></a></td>
                     <td class="address"><a class="insta" href="https://www.instagram.com/maimai8_/">maimai8_</a></td>
                 </tr>
                 </table>
