added My Works page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <nav>
                     <ul class="main-nav font-english">
                         <li><a href="#about">About</a></li>
+                        <li><a href="#my-works">My Works</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -81,7 +82,40 @@
         </section>
 
         <section class="my-works" id="my-works">
-
+            <h3 class="heading-large font-english fadein">My Works</h3>
+            <div class="responsive">
+                <div class="callot">
+                    <div class="devide">
+                        <h4><img src="images/title_callot.png" alt=""></h4>
+                    </div>
+                    <div class="devide">
+                        <img src="images/callot-calendar.png" alt="" class="callot-calendar">
+                        <img src="images/callot-hours.png" alt="" class="callot-hours">
+                    </div>
+                    <ul class="explanation-callot">
+                        <li>複数人での日程調整を手助けする、投票型日程調整Webアプリ</li>
+                        <li>誰がどの日のどの時間帯で空いており、それがどこの時間帯で被っているかを一目で確認することが可能</li>
+                    </ul>
+                    <p class="right"><a href="https://github.com/daikImai/Callot2" class="git-link">GitHub >></a></p>
+                </div>
+                <div class="colortiles">
+                    <div class="devide">
+                        <h4><img src="images/title_colortiles.png" alt=""></h4>
+                    </div>
+                    <div class="devide">
+                        <img src="images/colortiles-play.png" alt="" class="colortiles-play">
+                        <img src="images/colortiles-ranking.png" alt="" class="colortiles-ranking">
+                    </div>
+                    <ul class="explanation-colortiles">
+                        <li>与えられた色の数の組み合わせでぴったりタイルを塗っていく、シンプルなパズル型Webアプリゲーム</li>
+                        <li>ユーザ認証機能により、記録の保存や他ユーザとの競争が可能</li>
+                    </ul>
+                    <div class="df right">
+                        <p><a href="https://github.com/daikImai/ColorTiles" class="git-link">GitHub >></a></p>
+                        <p><a href="https://colortiles.onrender.com/" class="git-link">Play >></a></p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="contact" id="contact">
