made the website responsive

--- a/index.html
+++ b/index.html
@@ -18,21 +18,17 @@
     </head>
 
     <body>
-        <div class="cover cover-home">
-            <header class="page-header wrapper">
-                <h1 class="align-center">
-                    <a href="index.html"><img class="logo" src="images/my_logo.png" alt="logo"></a>
-                </h1>
-                <nav>
-                    <ul class="main-nav font-english">
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#my-works">My Works</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <h2 id="title" class="page-title font-english">Daiki Imai</h2>
-        </div>
+        <header class="page-header wrapper">
+            <h1><a href="index.html"><img class="logo" src="images/my_logo.png" alt="logo"></a></h1>
+            <nav>
+                <ul class="main-nav font-english">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#my-works">My Works</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h2 id="title" class="page-title font-english">Daiki Imai</h2>
 
         <section class="pictures">
             <img class="biggest onetoone" src="images/pic1.jpeg" alt="">
@@ -122,15 +118,15 @@
             <h3 class="heading-large font-english fadein">Contact</h3>
             <table>
                 <tr>
-                    <td><a href="https://github.com/daikImai"><img src="images/github-mark.png" alt="" class="git-icon"></a></td>
-                    <td class="address"><a class="github" href="https://github.com/daikImai">daikImai</a></td>
+                    <td><a href="https://github.com/daikImai"><img src="images/github_icon.png" alt="" class="git-icon"></a></td>
+                    <td class="address-git"><a class="github" href="https://github.com/daikImai">daikImai</a></td>
                 </tr>
                 <tr>
-                    <td><a href="mailto:8ikiad@gmail.com"><img src="images/mail_icon.jpg" alt="" class="icon"></a></td>
+                    <td><a href="mailto:8ikiad@gmail.com"><img src="images/mail_icon.png" alt="" class="icon"></a></td>
                     <td class="address"><a class="gmail" href="mailto:8ikiad@gmail.com">8ikiad@gmail.com</a></td>
                 </tr>
                 <tr>
-                    <td><a href="https://www.instagram.com/maimai8_/"><img src="images/instagram_icon.jpg" alt="" class="icon"></a></td>
+                    <td><a href="https://www.instagram.com/maimai8_/"><img src="images/instagram_icon.png" alt="" class="icon"></a></td>
                     <td class="address"><a class="insta" href="https://www.instagram.com/maimai8_/">maimai8_</a></td>
                 </tr>
                 </table>
