--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Daiki Imai - PROFILE</title>
-        <meta name="description" content="自己紹介">
+        <meta name="description" content="Daiki Imai's Portfolio Website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type=image/png href="images/my_logo.png">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
