added an animation on pictures

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <body>
         <header class="page-header wrapper">
-            <h1><a href="index.html"><img class="logo" src="images/my_logo.png" alt="logo"></a></h1>
+            <h1><a href="index.html"><img class="logo" src="images/my_logo.png" alt="logo" width="100" height="100"></a></h1>
             <nav>
                 <ul class="main-nav font-english">
                     <li><a href="#about">About</a></li>
