--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,16 @@
 
     <body>
         <header class="page-header wrapper">
-            <h1><a href="index.html"><img class="logo" src="images/my_logo.png" alt="logo" width="100" height="100"></a></h1>
+            <h1><a href="/"><img class="logo" src="images/my_logo.png" alt="logo" width="100" height="100"></a></h1>
             <nav>
                 <ul class="main-nav font-english">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#my-works">My Works</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#" onclick="scrollToAbout(event)">About</a></li>
+                    <li><a href="#" onclick="scrollToMyWorks(event)">My Works</a></li>
+                    <li><a href="#" onclick="scrollToContact(event)">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        <h2 id="title" class="page-title font-english">Daiki Imai</h2>
+        <h2 id="title" class="page-title font-english fadein">Daiki Imai</h2>
 
         <section class="pictures">
             <img class="biggest onetoone" src="images/pic1.jpeg" alt="">
