--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
                         <li>複数人での日程調整を手助けする、投票型日程調整Webアプリ</li>
                         <li>誰がどの日のどの時間帯で空いており、それがどこの時間帯で被っているかを一目で確認することが可能</li>
                     </ul>
-                    <p class="right"><a href="https://github.com/daikImai/Callot2" class="git-link">GitHub >></a></p>
+                    <p class="right"><a href="https://github.com/daikImai/Callot" class="git-link">GitHub >></a></p>
                 </div>
                 <div class="colortiles">
                     <div class="devide">
